<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Screen"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar"
            android:layout_width="128dp"
            android:layout_height="131dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="140dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/firefly"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.02" />

        <TextView
            android:id="@+id/nameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/UsernameDetail"
            android:textColor="@color/color_detail"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_avatar" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/urlUser"
            app:layout_constraintStart_toStartOf="@id/urlUser"
            app:layout_constraintTop_toBottomOf="@id/urlUser">

            <TextView
                android:id="@+id/countRepoView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/countrepo"
                android:textColor="@color/purple"
                android:textSize="16sp"
                app:drawableTint="?attr/colorControlNormal" />

            <TextView
                android:id="@+id/countFollowersView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/countfollower"
                android:textColor="@color/purple"
                android:textSize="16sp"
                app:drawableTint="?attr/colorControlNormal" />

            <TextView
                android:id="@+id/countFollowingView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/countfollowing"
                android:textColor="@color/purple"
                android:textSize="16sp"
                app:drawableTint="?attr/colorControlNormal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/linearLayout"
            app:layout_constraintStart_toStartOf="@id/linearLayout"
            app:layout_constraintTop_toBottomOf="@id/linearLayout">

            <TextView
                android:id="@+id/repoView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/repositorys"
                android:textColor="@color/usernameColor"
                android:textSize="16sp"
                app:drawableTint="?attr/colorControlNormal" />


            <TextView
                android:id="@+id/FollowersView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/followers"
                android:textColor="@color/usernameColor"
                android:textSize="16sp"
                app:drawableTint="?attr/colorControlNormal" />

            <TextView
                android:id="@+id/FollowingsView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/followings"
                android:textColor="@color/usernameColor"
                android:textSize="16sp"
                app:drawableTint="?attr/colorControlNormal" />


        </LinearLayout>


        <TextView
            android:id="@+id/urlUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/https_github_com_firefly"
            android:textColor="#32789E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameView" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/urlUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.448"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.747"
            tools:visibility="visible" />

<!--        <ImageView-->
<!--            android:id="@+id/btnFavorite"-->
<!--            android:layout_width="32dp"-->
<!--            android:layout_height="34dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:srcCompat="@drawable/ic_favorite_border" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabIndicatorColor="@color/purple_200"
            app:tabSelectedTextColor="#F47D7D"
            app:tabBackground="@color/floatingbutton"
            app:tabTextColor="@color/tablayouttext" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            app:backgroundTint="@color/floatingbutton"
            app:tint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/baseline_favorite_border_24" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>